optl-final.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: optl
 namespace: opentelemetry
 labels:
   name: optl
   app: opentelemetry
   component: optl-collector
spec:
 selector:
   matchLabels:
     name: optl
     app: opentelemetry
     component: optl-collector
 minReadySeconds: 5
 replicas: 1
 template:
   metadata:
     name: optl
     namespace: opentelemetry
     labels:
       name: optl
       app: opentelemetry
       component: optl-collector
   spec:
     containers:
       - command:
           - '/otelcol'
           - '--config=/conf/optl-collector-config.yaml'
         image: otel/opentelemetry-collector:latest
         name: otel-collector
         resources:
           limits:
             cpu: '1'
             memory: 2Gi
           requests:
             cpu: 200m
             memory: 400Mi
         ports:
           - containerPort: 4317   #otlp grpc
          #  - containerPort: 4318   # otlp http
          #  - containerPort: 55679  # zpages
          #  - containerPort: 13133  # health check
         volumeMounts:
           - name: optl-collector-config-vol
             mountPath: /conf
     volumes:
       - configMap:
           name: optl-collector-config
           items:
             - key: optl-collector-config
               path: optl-collector-config.yaml
         name: optl-collector-config-vol
---
apiVersion: v1
kind: Service
metadata:
 name: otel
 namespace: opentelemetry
 labels:
   app: opentelemetry
   component: otel-collector
spec:
 type: ClusterIP
 ports:
   - name: otlp-grpc # Default endpoint for OpenTelemetry gRPC receiver.
     port: 4317
     protocol: TCP
     targetPort: 4317
   - name: otlp-http # Default endpoint for OpenTelemetry HTTP receiver.
     port: 4318
     protocol: TCP
     targetPort: 4318
  #  - name: zpages
  #    port: 55679
  #    protocol: TCP
  #    targetPort: 55679
  #  - name: health-check
  #    port: 13133
  #    protocol: TCP
  #    targetPort: 13133
 selector:
   app: opentelemetry
   name: optl
